<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_square"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_create_budget_item"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/placeholder_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/placeholder_category"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/placeholder_price"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="@dimen/button_large_width"
        android:layout_height="@dimen/button_large_height"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="15dp"
        android:background="@color/button"
        android:text="@string/button_create"
        android:textColor="@color/button_txt" />
</FrameLayout>